# cluedo

./: INSTALL  Main.hs  README  cluedo.cabal  ctest.sh  ftest.sh  run.sh
Test/: Cluedo.hs  HunitAdaptor.hs
src/: Cluedo.hs  Main.hs
src/Cluedo/: Model.hs  Utils.hs
src/Test/: AllTests.hs  ByCabal.hs  ByFramework.hs
