Name:           cluedo
Version:        1.0.0
Description:    Cluedo Assistant
Synopsis:       Cluedo Assistant
Copyright:	2013 Victor Denisov
License:        GPL-2
License-file:   LICENSE
Author:	        Victor Denisov <denisovenator@gmail.com>
Maintainer:     Victor Denisov <denisovenator@gmail.com>
Build-type:     Simple
Homepage:       https://github.com/VictorDenisov/cluedo
Category:       Data
Cabal-version:  >=1.4

Executable cluedo
        hs-source-dirs:         src
        main-is:        Main.hs
        other-modules:  Cluedo
        build-depends:  base >= 3 && <= 4.5.0.0
                     ,  mtl >= 2.1.2
                     ,  haskeline >= 0.7.0.2
                     ,  transformers >= 0.3.0.0
                     ,  parsec >= 3.1.3

Test-Suite test
        type: detailed-0.9
        test-module: Test.Cluedo
        other-modules: Test.HunitAdaptor
        build-depends: base, Cabal >= 1.17, HUnit
